--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "firebase-admin": "^13.4.0",
     "register-service-worker": "^1.7.2",
     "v-offline": "^1.3.0",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.9.4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -31,7 +31,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "material-design-icons-iconfont": "^6.7.0",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-template-compiler": "^2.6.14"
+    "@vue/compiler-sfc": "^3.5.18"
   }
 }
